--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a>Remoto</a><a class="link" href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a class="logo">Remoto</a><a class="link" href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
     </nav>
     <header class="section-hero">
       <h1>
@@ -183,25 +183,27 @@
     </section>
     <footer class="section-footer">
       <div class="column">
-        <a href="#">Remoto</a><a href="#">Blog</a><a href="#">Facebook</a><a href="#">Linkedin</a>
+        <h4 class="logo">
+          Remoto
+        </h4>
       </div>
       <div class="column">
         <h4>
-          Remoto
+          About Remoto
         </h4>
         <a href="#">Features</a><a href="#">Pricing</a>
       </div>
       <div class="column">
         <h4>
-          Download
+          Download Links
         </h4>
-        <a href="#">Desktop App</a><a href="#">Mobile App</a>
+        <a href="#">Windows App</a><a href="#">macOS App</a><a href="#">Linux App</a>
       </div>
       <div class="column">
         <h4>
           Support
         </h4>
-        <a href="#">800-736-6860</a><a mailto="hi@remoto.me">hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms of Service</a><a href="terms-of-service.html" target="_blank">Privacy</a>
+        <a mailto="hi@remoto.me">hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms & Policies</a>
       </div>
     </footer>
     <script src="js/scripts.js"></script>
