Link some footer links

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   </head>
   <body>
     <nav class="navigation-menu">
-      <a class="logo">Remoto</a><a class="link" href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#product">Product</a>
+      <a class="logo">Remoto</a><a class="link" href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a><a class="link" href="#pricing">Pricing</a><a class="link" href="#features">Features</a>
     </nav>
     <header class="section-hero">
       <h1>
@@ -23,7 +23,7 @@
       </h4>
       <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </header>
-    <section class="section-features" id="product">
+    <section class="section-features" id="features">
       <div class="feature">
         <h2>
           Your team on the same page
@@ -191,7 +191,7 @@
         <h4>
           About Remoto
         </h4>
-        <a href="#">Features</a><a href="#">Pricing</a>
+        <a href="#features">Features</a><a href="#pricing">Pricing</a><a href="https://beta.remoto.me/auth/sign-in" target="_blank">Sign-in</a>
       </div>
       <div class="column">
         <h4>
