Add og:description metatah

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta content="Communication, VoIP, PBX, Team" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Remoto" property="og:title" />
+    <meta content="Remoto is an enjoyable and productive solution for sales and support teams communicate with customers" property="og:description" />
     <meta content="website" property="og:type" />
     <meta content="http://remoto.me/" property="og:url" />
     <meta content="./images/og-image.png" property="og:image" />
