--- a/index.html
+++ b/index.html
@@ -197,13 +197,13 @@
         <h4>
           Download Links
         </h4>
-        <a href="#">Windows App</a><a href="#">macOS App</a><a href="#">Linux App</a>
+        <a href="https://s3.amazonaws.com/remoto-releases/squirrel.windows/x64/Remoto-1.1.54+Setup.exe">Windows App</a><a href="https://s3.amazonaws.com/remoto-releases/Remoto-1.1.53.dmg">macOS App</a><a href="https://s3.amazonaws.com/remoto-releases/Remoto_1.1.54_amd64.deb">Linux App</a>
       </div>
       <div class="column">
         <h4>
           Support
         </h4>
-        <a mailto="hi@remoto.me">hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms & Policies</a>
+        <a href="terms-of-service.html" target="_blank">Terms & Policies</a>
       </div>
     </footer>
     <script src="js/scripts.js"></script>
