--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
-      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
     </header>
     <section class="section-features" id="features">
       <div class="feature">
@@ -68,7 +68,7 @@
           <p class="note">
             Yeeah! 🎉
           </p>
-          <a class="button -small" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+          <a class="button -small" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -183,7 +183,7 @@
           Fred Guth, Founder & CEO
         </p>
       </div>
-      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
     </section>
     <footer class="section-footer">
       <div class="column">
