Remove google page conversion code

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h4>
         Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
       </h4>
-      <a class="button" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </header>
     <section class="section-features" id="features">
       <div class="feature">
@@ -68,7 +68,7 @@
           <p class="note">
             Yeeah! 🎉
           </p>
-          <a class="button -small" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
+          <a class="button -small" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
           <ul class="features">
             <li>
               Free Intra-company calls worldwide
@@ -183,7 +183,7 @@
           Fred Guth, Founder & CEO
         </p>
       </div>
-      <a class="button" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)" target="_blank">Start Free</a>
+      <a class="button" href="https://beta.remoto.me/auth/sign-up" target="_blank">Start Free</a>
     </section>
     <footer class="section-footer">
       <div class="column">
@@ -207,33 +207,10 @@
         <h4>
           Support
         </h4>
-        <a href="terms-of-service.html" target="_blank">Terms & Policies</a>
+        <a mailto="hi@remoto.me">hi@remoto.me</a><a href="terms-of-service.html" target="_blank">Terms & Policies</a>
       </div>
     </footer>
     <link href="./style/style.css" rel="stylesheet" type="text/css" />
     <script src="js/scripts.js"></script>
-    <script>
-      goog_snippet_vars = function() {
-          var w = window;
-          w.google_conversion_id = 943895741;
-          w.google_conversion_label = "xdO5CO7RkXMQvemKwgM";
-          w.google_remarketing_only = false;
-        }
-        goog_report_conversion = function(url) {
-          goog_snippet_vars();
-          window.google_conversion_format = "3";
-          var opt = new Object();
-          opt.onload_callback = function() {
-          if (typeof(url) != 'undefined') {
-            window.location = url;
-          }
-        }
-        var conv_handler = window['google_trackConversion'];
-        if (typeof(conv_handler) == 'function') {
-          conv_handler(opt);
-        }
-      }
-    </script>
-    <script src="//www.googleadservices.com/pagead/conversion_async.js" type="text/javascript"></script>
   </body>
 </html>
