Update meta description and image

--- a/index.html
+++ b/index.html
@@ -3,15 +3,15 @@
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <title>Remoto</title>
-    <meta content="Remoto is an enjoyable and productive solution for sales and support teams communicate with customers" name="description" />
+    <meta content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." name="description" />
     <meta content="" name="author" />
-    <meta content="Communication, VoIP, PBX, Team" name="keywords" />
+    <meta content="Communication, VoIP, PBX, Team, Support, Sales" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta content="Remoto" property="og:title" />
-    <meta content="Remoto is an enjoyable and productive solution for sales and support teams communicate with customers" property="og:description" />
+    <meta content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." property="og:description" />
     <meta content="website" property="og:type" />
     <meta content="http://remoto.me/" property="og:url" />
-    <meta content="./images/og-image.png" property="og:image" />
+    <meta content="./images/og-image2.png" property="og:image" />
     <link href="./images/favicon.png" rel="icon" type="image/png" />
   </head>
   <body>
