Update meta tag title and description

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
     <meta charset="utf-8" />
     <meta content="IE=edge,chrome=1" http-equiv="X-UA-Compatible" />
     <title>Remoto</title>
-    <meta content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." name="description" />
+    <meta content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." name="description" />
     <meta content="" name="author" />
     <meta content="Communication, VoIP, PBX, Team, Support, Sales" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Remoto" property="og:title" />
-    <meta content="Keep your team close and your clients closer. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." property="og:description" />
+    <meta content="Remoto: Your team close and your clients closer" property="og:title" />
+    <meta content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." property="og:description" />
     <meta content="website" property="og:type" />
     <meta content="http://remoto.me/" property="og:url" />
     <meta content="./images/og-image2.png" property="og:image" />
