Update open graph title

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content="" name="author" />
     <meta content="Communication, VoIP, PBX, Team, Support, Sales" name="keywords" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="Remoto: Your team close and your clients closer" property="og:title" />
+    <meta content="Remoto: Your Team Close and Your Clients Closer" property="og:title" />
     <meta content="Your team on the same page. Remoto is an enjoyable and productive solution for sales and support teams communicate with customers." property="og:description" />
     <meta content="website" property="og:type" />
     <meta content="http://remoto.me/" property="og:url" />
