--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         Keep your team close  and your clients closer
       </h1>
       <h4>
-        Remoto is an enjoyable and productive solution for sales and support teams communicate with customers.
+        Remoto is an enjoyable and productive solution for sales and support teams to communicate with customers.
       </h4>
       <a class="button" href="https://beta.remoto.me/auth/sign-up" onclick="goog_report_conversion (&#39;https://beta.remoto.me/auth/sign-up&#39;)">Start Free</a>
     </header>
@@ -33,7 +33,7 @@
           Your team on the same page
         </h2>
         <p>
-          Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and stays always in sync.
+          Great customer communication relies on internal coordination. With Remoto, your team shares a common view of all customer interactions and always stays in sync.
         </p>
       </div>
       <div class="feature">
@@ -41,7 +41,7 @@
           Freedom from the desk phone
         </h2>
         <p>
-          Remoto lets you make and receive calls with your business numbers, from your laptop or mobile. Easily transfer calls and create conferences, no pins or numbers to memorize, no cheat sheet clutering your desk.
+          Remoto lets you make and receive calls with your business numbers from your laptop or mobile. Easily transfer calls and create conferences, without pins or numbers to memorize, and no cheat sheet clutering your desk.
         </p>
       </div>
       <div class="feature">
@@ -49,7 +49,7 @@
           Transform your business in 7 min.
         </h2>
         <p>
-          Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments
+          Choose toll-free or local numbers from over 40 countries, invite your team members and get going in under 7 minutes. No need for the IT guy or hardware investments.
         </p>
       </div>
     </section>
@@ -165,16 +165,16 @@
           Life is short and the world is warming. What can you do about it? I bet you already are: <span class="-strike">Remoto</span> Remote working.
         </p>
         <p>
-          The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere. Everybody became a remote worker whether they realize it or not.  Working remotely allows us to be there for the ones we love and see the world, without ever having to commute.
+          The nature of work has changed from a place you used to go to something you do with your mobile or laptop from anywhere.
         </p>
         <p>
-          Still, it is hard to keep everybody in sync when people don't bump into each other in the water-cooler. Guess what… even for people that meet in the office, effective communication doesn't just happen. How to keep a coherent customer communication when it happens by email, phone or messaging apps, and involve several people in your organization?
+          Still, it is hard to keep everybody in sync when people don't bump into each other at the water-cooler. And even for people that meet in the office, effective communication doesn't just happen. How can you maintain coherent customer communication over email, phone or messaging apps, involving several people in your organization?
         </p>
         <p>
-          This is a problem I had myself and so did several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
+          This is a problem I myself have had, along with several professionals we interviewed. Remoto's goal is to allow you to communicate better with your customers and your team, and prove that people don't need to be in the same room to be on the same page.
         </p>
         <p>
-          Remoto is more than work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
+          Remoto is more than a work tool, it is a way of thinking about work. Think outside the cubicle, be Remoto.
         </p>
         <p>
           Yours,
